Some refactoring. Added Dragonflies to Q Switching combat targets with mousewheel Chop trees completely with F

--- a/etc/curio.config
+++ b/etc/curio.config
@@ -21,7 +21,7 @@ gfx/invobjs/beartooth;1;30:00:00
 gfx/invobjs/boartusk;1;14:30:00
 gfx/invobjs/catgold;1;24:00:00
 gfx/invobjs/conecow;1;0:20:00
-gfx/invobjs/crudeidol;1;9:00:00
+gfx/invobjs/crudeidol;1;24:00:00
 gfx/invobjs/deathchrysalis;1;9:00:00
 gfx/invobjs/dragonfly-emerald;1;4:00:00
 gfx/invobjs/dragonfly-ruby;1;4:00:00
@@ -61,4 +61,6 @@ gfx/invobjs/sandcastle;4;96:00:00
 gfx/invobjs/silkenribbon;1;14:00:00
 gfx/invobjs/oddtuber;1;15:00:00
 gfx/invobjs/cornucopia;1;168:00:00
-gfx/invobjs/seerstea;1:22:00:00
+gfx/invobjs/seerstea;1;22:00:00
+gfx/invobjs/silverrose;1;22:00:00
+gfx/invobjs/goldentooth;1;33:00:00
