Harvest and replant task Added squirrel curio

--- a/etc/curio.config
+++ b/etc/curio.config
@@ -64,3 +64,4 @@ gfx/invobjs/cornucopia;1;168:00:00
 gfx/invobjs/seerstea;1;22:00:00
 gfx/invobjs/silverrose;1;22:00:00
 gfx/invobjs/goldentooth;1;33:00:00
+gfx/invobjs/squirreltail;1;44:00:00
